--- a/FrontEnd/src/app/module/reccer/company/company.component.html
+++ b/FrontEnd/src/app/module/reccer/company/company.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container py-4">
 	@if (this.company) {
 	<div class="row w-100 g-0">
 		<div class="col-5 d-flex flex-column justify-content-center align-items-center">
