--- a/FRONTEND/src/app/module/interview/interview-id/question-table/view-dialog/view-dialog-content.component.html
+++ b/FRONTEND/src/app/module/interview/interview-id/question-table/view-dialog/view-dialog-content.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title class="bg-dark text-white p-3">QUESTION</h2>
 <mat-dialog-content>
-	<div class="container-fluid mt-3">
+	<div class="container-fluid mt-3 p-5">
 		<div class="row mb-3">
 			<div class="col-md-5 col-sm-3 d-flex align-items-center">
 				<mat-icon>grid_3x3</mat-icon>
@@ -8,11 +8,11 @@
 			</div>
 			<div class="col-1 d-flex align-items-center">:</div>
 			<div class="col-md-6 col-sm-8">
-				<p class="mb-0">{{ data.params.row.questionid }}</p>
+				<p class="mb-0">{{ data.params.row.questionId }}</p>
 			</div>
 		</div>
 
-		<div class="row mb-3">
+		<!-- <div class="row mb-3">
 			<div class="col-md-5 col-sm-3 d-flex align-items-start">
 				<mat-icon>source</mat-icon>
 				<h3 class="mb-0 ms-2">Content</h3>
@@ -20,7 +20,11 @@
 			<div class="col-1 d-flex align-items-start">:</div>
 			<div class="col-md-6 col-sm-8">
 				<mat-form-field class="w-100">
-					<textarea matInput [value]="data.params.row.questionstring" readonly rows="4"></textarea>
+					<textarea
+						matInput
+						[value]="data.params.row.questionString"
+						readonly
+						rows="4"></textarea>
 				</mat-form-field>
 			</div>
 		</div>
@@ -61,6 +65,6 @@
 				<p class="mb-0">{{ data.languagename }}</p>
 			</div>
 		</div>
-		}
+		} -->
 	</div>
 </mat-dialog-content>
