--- a/FRONTEND/src/app/module/interview/interview-start/left-table/left-table.component.html
+++ b/FRONTEND/src/app/module/interview/interview-start/left-table/left-table.component.html
@@ -1,30 +1,38 @@
-<mat-tab-group [(selectedIndex)]="currentSubTab" (selectedIndexChange)="onTabChange($event)">
-	<mat-tab *ngFor="let sub of superSet; let i = index" [label]="getTabLabel(sub)">
-		<ng-container *ngIf="currentSubTab === i">
-			<table mat-table [dataSource]="sub.questions" class="mat-elevation-z8 w-100">
-				<ng-container *ngFor="let column of columns" [matColumnDef]="column.field">
-					<th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+<mat-tab-group>
+	<mat-tab
+		*ngFor="let sub of superSet; let i = index"
+		[label]="getTabLabel(sub)">
+		<ng-container>
+			<table
+				mat-table
+				[dataSource]="sub.questions"
+				class="mat-elevation-z8 w-100">
+				<ng-container
+					*ngFor="let column of columns.slice(1)"
+					[matColumnDef]="column.field">
+					<th mat-header-cell *matHeaderCellDef>
+						{{ column.header }}
+					</th>
 					<td mat-cell *matCellDef="let element">
-						<ng-container *ngIf="column.field !== 'action'; else actionTemplate">
+						<ng-container>
 							{{ element[column.field] }}
 						</ng-container>
-						<ng-template #actionTemplate>
+						<!-- <ng-template #actionTemplate>
 							<app-view-dialog
 								[params]="element"
 								[cate]="cate"
-								[languagename]="cate === 1 ? sub.languagename : null"
+								[languagename]="
+									cate === 1 ? sub.languagename : null
+								"
 								[skillname]="cate === 2 ? sub.skillname : null">
 							</app-view-dialog>
-						</ng-template>
+						</ng-template> -->
 					</td>
 				</ng-container>
-
-				<tr mat-header-row *matHeaderRowDef="this.columns.map(c => c.field)"></tr>
+				<tr mat-header-row *matHeaderRowDef="getFields().slice(1)"></tr>
 				<tr
 					mat-row
-					*matRowDef="let row; columns: columns.map(c => c.field);"
-					(click)="onSelectionChange([row.questionid])"
-					[class.selected]="currentQues.includes(row.questionid)"></tr>
+					*matRowDef="let row; columns: getFields().slice(1)"></tr>
 			</table>
 		</ng-container>
 	</mat-tab>
