--- a/FRONTEND/src/app/module/interview/list-interview/list-interview.component.html
+++ b/FRONTEND/src/app/module/interview/list-interview/list-interview.component.html
@@ -169,7 +169,7 @@
 					<ng-container matColumnDef="actions">
 						<th mat-header-cell *matHeaderCellDef>Actions</th>
 						<td mat-cell *matCellDef="let interview">
-							<button mat-icon-button color="primary" (click)="handleDetailClick(interview.InterviewId)">
+							<button mat-icon-button color="primary" (click)="handleDetailClick(interview.interviewId)">
 								<mat-icon>info</mat-icon>
 							</button>
 						</td>
