--- a/FrontEnd/src/app/module/home/home.component.html
+++ b/FrontEnd/src/app/module/home/home.component.html
@@ -1,22 +1,36 @@
 <main class="container mt-5">
 	<section class="banner">
-		<img src="../../../assets/HCMUTE-fit.png" alt="Banner" class="img-fluid w-100" />
+		<img
+			src="../../../assets/HCMUTE-fit.png"
+			alt="Banner"
+			class="img-fluid w-100" />
 		<header class="bg-light py-5">
 			<div class="text-center">
 				<h1 class="h1">Trường Đại học Sư phạm Kỹ thuật - HCMUTE</h1>
-				<p class="lead">Khoa <b>Công nghệ thông tin</b> - Chuyên ngành <b>Hệ thống thông tin</b></p>
+				<p class="lead">
+					Khoa <b>Công nghệ thông tin</b> - Chuyên ngành
+					<b>Hệ thống thông tin</b>
+				</p>
+
+				<p>NĂM HỌC 20203_2024, HK2</p>
 			</div>
 		</header>
 
 		<div class="banner-content text-center py-5">
-			<h2 class="h2 mb-3">Khóa luận: Xây dựng hệ thống website cho trung tâm hỗ trợ tuyển dụng</h2>
+			<h1>KHÓA LUẬN TỐT NGHIỆP</h1>
+			<h2 class="h2 mb-3">
+				Đề tài: Xây dựng hệ thống website cho trung tâm hỗ trợ tuyển
+				dụng
+			</h2>
 			<p class="lead mb-4"><b>Giảng viên hướng dẫn:</b> Võ Xuân Thể</p>
 			<div class="mb-4">
 				<p class="mb-0"><b>Thực hiện:</b></p>
 				<p class="mb-0">Lý Hồng Phát - 20110692</p>
 				<p class="mb-0">Nguyên Phong Phú - 20110696</p>
 			</div>
-			<a href="positions" class="btn btn-primary btn-lg">Tìm kiếm việc làm ngay</a>
+			<a href="positions" class="btn btn-primary btn-lg"
+				>Tìm kiếm việc làm ngay</a
+			>
 		</div>
 	</section>
 
