--- a/FRONTEND/src/app/module/interview/interview-id/score-table/score-table.component.html
+++ b/FRONTEND/src/app/module/interview/interview-id/score-table/score-table.component.html
@@ -8,16 +8,17 @@
 		<ng-container matColumnDef="score">
 			<th mat-header-cell *matHeaderCellDef>Score</th>
 			<td mat-cell *matCellDef="let element">
-				<span [innerHTML]="renderKatex(element.score.toString())"></span>
+				<span
+					[innerHTML]="renderKatex(element.score.toString())"></span>
 			</td>
 		</ng-container>
 
-		<ng-container matColumnDef="formula">
+		<!-- <ng-container matColumnDef="formula">
 			<th mat-header-cell *matHeaderCellDef class="d-none d-sm-table-cell">Formula</th>
 			<td mat-cell *matCellDef="let element" class="d-none d-sm-table-cell">
 				<span [innerHTML]="renderKatex(element.formula)"></span>
 			</td>
-		</ng-container>
+		</ng-container> -->
 
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
