--- a/FRONTEND/src/app/module/interview/interview-start/question-transfer/question-transfer.component.html
+++ b/FRONTEND/src/app/module/interview/interview-start/question-transfer/question-transfer.component.html
@@ -24,128 +24,54 @@
 				(currentQuesChange)="setCurrentQuesFromEvent($event)">
 			</app-right-table> -->
 
-			<div class="container mt-4">
-				<form
-					[formGroup]="questionForm!"
-					(ngSubmit)="onSubmit()"
-					class="row g-3">
-					<div class="col-12">
-						<mat-form-field appearance="fill" class="w-100">
-							<mat-label>Question</mat-label>
-							<textarea
-								matInput
-								formControlName="questionText"
-								rows="3"></textarea>
-							<mat-error
-								*ngIf="
-									questionForm!
-										.get('questionText')
-										?.hasError('required')
-								">
-								Please enter a question
-							</mat-error>
-						</mat-form-field>
-					</div>
-
-					<div class="col-md-6">
-						<mat-form-field appearance="fill" class="w-100">
-							<mat-label>Question type</mat-label>
-							<mat-select formControlName="category">
-								<mat-option
-									*ngFor="let category of categories"
-									[value]="category">
-									{{ category }}
-								</mat-option>
-							</mat-select>
-							<mat-error
-								*ngIf="
-									questionForm!
-										.get('category')
-										?.hasError('required')
-								">
-								Vui lòng chọn loại câu hỏi
-							</mat-error>
-						</mat-form-field>
-					</div>
-
-					<div class="col-md-6">
-						<mat-form-field appearance="fill" class="w-100">
-							<mat-label>Score</mat-label>
-							<input
-								matInput
-								type="number"
-								formControlName="points"
-								min="0"
-								max="100" />
-						</mat-form-field>
-					</div>
-
-					<div class="col-12">
-						<button
-							mat-raised-button
-							color="primary"
-							type="submit"
-							[disabled]="!questionForm!.valid">
-							Thêm câu hỏi
-						</button>
-					</div>
+			<div class="container">
+				<form (ngSubmit)="addQuestion()" class="mb-3">
+					<mat-form-field class="w-100">
+						<mat-label>Input question</mat-label>
+						<input
+							matInput
+							[(ngModel)]="newQuestion"
+							name="newQuestion"
+							required />
+					</mat-form-field>
+					<button mat-raised-button color="primary" type="submit">
+						Add question
+					</button>
 				</form>
 
-				<div class="mt-4">
-					<table
-						mat-table
-						[dataSource]="dataSource!"
-						class="mat-elevation-z8 w-100">
-						<ng-container matColumnDef="questionText">
-							<th mat-header-cell *matHeaderCellDef>Câu hỏi</th>
-							<td mat-cell *matCellDef="let element">
-								{{ element.questionText }}
+				<table class="table" *ngIf="questions.length > 0">
+					<thead>
+						<tr>
+							<th>Question</th>
+							<th>Score</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr *ngFor="let question of questions; let i = index">
+							<td>{{ question.text }}</td>
+							<td>
+								<mat-form-field>
+									<mat-label>Điểm</mat-label>
+									<input
+										matInput
+										type="number"
+										[(ngModel)]="question.score"
+										(change)="onScoreChange()"
+										name="score{{ i }}" />
+								</mat-form-field>
 							</td>
-						</ng-container>
-
-						<ng-container matColumnDef="category">
-							<th mat-header-cell *matHeaderCellDef>Loại</th>
-							<td mat-cell *matCellDef="let element">
-								{{ element.category }}
-							</td>
-						</ng-container>
-
-						<ng-container matColumnDef="points">
-							<th mat-header-cell *matHeaderCellDef>Điểm</th>
-							<td mat-cell *matCellDef="let element">
-								<input
-									matInput
-									type="number"
-									[value]="element.points"
-									(change)="updatePoints(element, $event)"
-									min="0"
-									max="100" />
-							</td>
-						</ng-container>
-
-						<ng-container matColumnDef="actions">
-							<th mat-header-cell *matHeaderCellDef>Actions</th>
-							<td mat-cell *matCellDef="let element">
+							<td>
 								<button
 									mat-icon-button
 									color="warn"
-									(click)="deleteQuestion(element)">
+									(click)="deleteQuestion(i)">
 									<mat-icon>delete</mat-icon>
 								</button>
 							</td>
-						</ng-container>
-
-						<tr
-							mat-header-row
-							*matHeaderRowDef="displayedColumns"></tr>
-						<tr
-							mat-row
-							*matRowDef="
-								let row;
-								columns: displayedColumns
-							"></tr>
-					</table>
-				</div>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 	</div>
